// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders container 1`] = `
.c0 {
  padding: 0 12px;
  margin-left: auto;
  margin-right: auto;
  height: 100%;
  width: 100%;
  max-width: 1030px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  Wrapped Content
</div>
`;

exports[`Container renders container with centered content 1`] = `
.c0 {
  padding: 0 12px;
  margin-left: auto;
  margin-right: auto;
  height: 100%;
  width: 100%;
  max-width: 1030px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
  className="c0"
>
  Wrapped Content
</div>
`;

exports[`Container renders container with full width content 1`] = `
.c0 {
  padding: 0 12px;
  margin-left: auto;
  margin-right: auto;
  height: 100%;
  width: 100%;
  max-width: 1030px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100% !important;
}

<div
  className="c0"
>
  Wrapped Content
</div>
`;

exports[`Container renders container with max content width 1`] = `
.c0 {
  padding: 0 12px;
  margin-left: auto;
  margin-right: auto;
  height: 100%;
  width: 100%;
  max-width: 1030px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 480px !important;
}

<div
  className="c0"
>
  Wrapped Content
</div>
`;

exports[`Container renders container with no padding 1`] = `
.c0 {
  padding: 0 12px;
  margin-left: auto;
  margin-right: auto;
  height: 100%;
  width: 100%;
  max-width: 1030px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0 !important;
}

<div
  className="c0"
>
  Wrapped Content
</div>
`;
